--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -693,7 +693,7 @@ We have observationally determined $\Omega_0 \approx 1$, so we have a flat geome
 \begin{align*}
 	H(a)^2 = \frac{8\pi G}{3} \rho(a) - \frac{Kc^2}{a^2}
 \end{align*}
-We look at the deviation of $\Omega$ form $1$:
+We look at the deviation of $\Omega$ from $1$:
 \begin{align*}
 	\frac{1 - \Omega(a)}{\Omega(a)}
 	&= \Omega(a)^{-1} - 1\\
@@ -707,13 +707,14 @@ We look at the deviation of $\Omega$ form $1$:
 Consider time $t_i$ in the radiation era. Then
 \begin{align*}
 	\frac{\Omega_i^{-1} - 1}{\Omega_0^{-1} - 1}
-	&= \frac{\Omega_\text{init}^{-1} - 1}{\Omega_\text{eq}^{-1} -1}
+	&= \frac{\Omega_i^{-1} - 1}{\Omega_\text{eq}^{-1} -1}
 	\frac{\Omega_\text{eq}^{-1}-1}{\Omega_0^{-1}-1}\\
 	&= 
-	\left( \frac{a_\text{init}}{a_\text{eq}} \right)^2 
+	\left( \frac{a_i}{a_\text{eq}} \right)^2 
 	\left( \frac{a_\text{eq}}{a_0} \right)\\
-	&=	\left( \frac{T_\text{init}}{T_\text{eq}} \right)^2 
-	\left( \frac{T_\text{eq}}{T_0} \right) \text{  TODO probably wrong }
+	&= \left( \frac{T_\text{eq}}{T_i} \right)^2
+	\frac{T_0}{T_\text{eq}}
+	&& T \propto a^{-1} \text{ for a relativistic gas}
 \end{align*}
 We choose the Planck time as our starting point:
 \begin{align*}
