Add figure for inflation

--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -762,11 +762,14 @@ We define two things two reformulate the horizon problem:
 	This is the maximum comoving distance that photons could have travelled since last scattering.
 \end{itemize}
 
-TODO diagram
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{img/inflation.png}
+	\caption{The light cone structure in an inflationary universe. Without inflation, the forward light cone (dashed line) would be smaller than our past light cone, $\chi_p$, at the last scattering surface, resulting in causality problems. With a period of inflation from $t_i$ to $t_e$, however, the forward light cone can be larger than the past light cone at $t_\text{ls}$.}
+	\label{fig:inflation}
+\end{figure}
 
-The solid line is the past light cone $\chi_p$, and the dashed lines are the forward light cone with ($\chi_f$) and without ($\chi_f'$) inflation.
-
-The horizon problem can be stated mathematically as $\chi_f' < \chi_p$: Regions which are observable today to have similar temperatures were apparently not in causal contact at last scattering. A solution is to increase $\chi_f'$ through a period of accelerated expansion called inflation.
+The horizon problem can be stated mathematically as $\chi_f' < \chi_p$: Regions which are observable today to have similar temperatures were apparently not in causal contact at last scattering. A solution is to increase $\chi_f'$ through a period of accelerated expansion called inflation. A sketch of this is shown in \cref{fig:inflation}.
 
 Let $t_i$ and $t_e$ be the start and end time of inflation, with $\Delta t = t_e - t_i$. We know
 \begin{align*}
