--- a/tex/config/xemath.tex
+++ b/tex/config/xemath.tex
@@ -21,10 +21,10 @@
 \DeclareMathOperator{\diag}{diag}
 
 % vector calculus
-\newcommand{\Lap}{ \vec{\Delta} }
-\newcommand{\Rot}{ \vec{\nabla} \times }
-\newcommand{\Div}{ \vec{\nabla} \cdot }
-\newcommand{\Grad}{ \vec{\nabla} }
+\newcommand{\Div}{\vec{\nabla}\cdot}
+\newcommand{\Grad}{\vec{\nabla}}
+\newcommand{\Rot}{\vec{\nabla}\cdot}
+\newcommand{\Lap}{\laplacian}
 \newcommand{\Dal}{ \square }
 
 % number sets
