--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -671,7 +671,7 @@ The ΛCMD model is very successful to fit current observations, but there are so
 The ΛCDM model without inflation has a few intrinsic fundamental problems.
 
 \subsection{The horizon problem}
-We had defined the particle horizon
+We have defined the particle horizon
 \begin{align*}
 	\chi_h(t) = \int_0^t \frac{c \dd{t'}}{a(t')},
 \end{align*}
@@ -800,10 +800,34 @@ One can show that
 \end{align*}
 assuming $60$ $e$-foldings. As a result, any curvature that was originally there gets flattened by inflation.
 
+\subsection{Monopole problem}
+The monopoles are diluted by the expansion during inflation by a factor
+\begin{align*}
+	\left( \frac{a_e}{a_i} \right)^3 \approx \num{e78},
+\end{align*}
+so the monopole density after inflation is practically zero.
+
+\subsection{Structure formation problem}
+As we will see later, inflation provides a mechanism to generate primordial fluctuations. Microscopic quantum fluctuations are turned into macroscopic classical fluctuations by the rapid expansion.
+
+\subsection{Initial condition problem}
+Inflation avoids having to set finely tuned initial conditions, since they will be diluted by the expansion. Quantum gravity is not required to solve this problem.
 
 
+\subsection{Realization}
+Inflation requires vacuum energy, which is realized as a scalar field $\phi(\vec{x}, t)$, called the \emph{inflaton}. The potential of the scalar field is sketched in \cref{fig:inflaton-potential}.
 
+TODO Diagram
 
+During inflation, $\phi$ is in a false vacuum state at a local minimum  or a flat part of the potential. During the end of inflation, $\phi$ reaches the true vacuum state, which has a lower potential energy. This generates vacuum energy, which in turn drives accelerated expansion.
+
+We need a \emph{slow roll condition}, which impedes the field from changing too quickly:
+\begin{align*}
+	\dot{\phi}^2 \ll V(\phi)
+\end{align*}
+There are several models, some of which are called old inflation, new inflation, and chaotic inflation. There are many other models proposed, indicating that inflation is still an ongoing field of research.
+
+TODO Diagram
 
 
 
