Add figure: inflation potential

--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -769,6 +769,7 @@ We define two things two reformulate the horizon problem:
 	\label{fig:inflation}
 \end{figure}
 
+
 The horizon problem can be stated mathematically as $\chi_f' < \chi_p$: Regions which are observable today to have similar temperatures were apparently not in causal contact at last scattering. A solution is to increase $\chi_f'$ through a period of accelerated expansion called inflation. A sketch of this is shown in \cref{fig:inflation}.
 
 Let $t_i$ and $t_e$ be the start and end time of inflation, with $\Delta t = t_e - t_i$. We know
@@ -815,19 +816,22 @@ Inflation avoids having to set finely tuned initial conditions, since they will 
 
 
 \subsection{Realization}
-Inflation requires vacuum energy, which is realized as a scalar field $\phi(\vec{x}, t)$, called the \emph{inflaton}. The potential of the scalar field is sketched in \cref{fig:inflaton-potential}.
+Inflation requires vacuum energy, which is realized as a scalar field $\phi(\vec{x}, t)$, called the \emph{inflaton}. The potential of the scalar field is sketched in \cref{fig:false-vacuum}.
 
-TODO Diagram
+\begin{marginfigure}
+	\centering
+	\includegraphics[width=\textwidth]{img/false-vacuum.png}
+	\caption{The potential of the inflaton field. During inflation, the field moves from its initial false vacuum state to a true vacuum state, which generates vaccum energy.}
+	\label{fig:false-vacuum}
+\end{marginfigure}
 
 During inflation, $\phi$ is in a false vacuum state at a local minimum  or a flat part of the potential. During the end of inflation, $\phi$ reaches the true vacuum state, which has a lower potential energy. This generates vacuum energy, which in turn drives accelerated expansion.
 
-We need a \emph{slow roll condition}, which impedes the field from changing too quickly:
+We impose a \emph{slow roll condition}, which impedes the field from changing too quickly:
 \begin{align*}
 	\dot{\phi}^2 \ll V(\phi)
 \end{align*}
-There are several models, some of which are called old inflation, new inflation, and chaotic inflation. There are many other models proposed, indicating that inflation is still an ongoing field of research.
-
-TODO Diagram
+There are several models, some of which are old inflation, new inflation, and chaotic inflation. There are many other models proposed, indicating that inflation is still an ongoing field of research.
 
 
 
