--- a/tex/config/fonts.tex
+++ b/tex/config/fonts.tex
@@ -5,9 +5,11 @@
 \usepackage{amstext}
 \usepackage{unicode-math}
 
+
+
 \setmainfont{Libertinus Serif}
 \setmonofont{Libertinus Mono}
-\setmathfont{Libertinus Math}
+\setmathfont[math-style=ISO, bold-style=ISO]{Libertinus Math}
 
 
 \input{tex/config/xemath}
