--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -22,7 +22,7 @@ The time evolution of these parameters is described by the \emph{fluid equations
 \begin{align*}
 	\Dv{\rho}{t} &= - \rho \Grad_r \cdot \vec{u}
 	&& \text{continuity equation, conservation of mass}\\
-	\Dv{^2\vec{u}}{t^2} &= - \frac{\Grad_r p}{\rho} - \Grad_r \phi
+	\Dv{\vec{u}}{t} &= - \frac{\Grad_r p}{\rho} - \Grad_r \phi
 	&&\text{acceleration} = \text{pressure force} + \text{gravitational force}\\
 	\Lap_r \phi &= 4 \pi G \rho
 	&&\text{Poisson equation}
